#4479 closed bug (fixed)
Resolutions missing with LG W2353V-PF monitor
Reported by: | ThaLuser | Owned by: | rudolfc |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Drivers/Graphics/nVidia | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
When I use my LG W2353V-PF monitor with a GeForce FX 5200 video card, it doesn't detect the native resolution of 1920x1080. I only get 1680x1050.
Attachments (4)
Change History (15)
comment:1 by , 13 years ago
by , 13 years ago
by , 13 years ago
Attachment: | nvidia.10de_0322_010000.0.log added |
---|
comment:4 by , 13 years ago
Hi,
Thanks for the info and the log(!). The driver seems to work fully OK. That is, EDID is fetched, the native resolution and modeline are known. The only thing that I can think of causing the problem is the fact that there's no 1920x1080 modeline in the driver. This might be the reason app_server doesn't startup in this mode. I'll add the modeline (I now have an example from you :) and then I'll get back to you.
BTW: you are running version 1.00 of the driver, the current one is 1.03. This version sits in the alpha release now. (still missing that modeline though).
Bye!
Rudolf.
comment:5 by , 13 years ago
Hi there,
I just added your screen's native modeline to the driver. Can you please test hrev33131 and upload a log?
Please make sure you have a default nvidia.settings file, with only the logmask line set to full logging. Don't touch the other options (not needed if all is OK).
Thanks!
Rudolf.
by , 13 years ago
by , 13 years ago
Attachment: | nvidia.10de_0322_010000.0.2.log added |
---|
comment:6 by , 13 years ago
The resolution works correctly, but there is static when I move a window around.
comment:8 by , 13 years ago
Hi,
That's good news.
About the static: this indicates that not enough RAM bandwidth is available to feed the DAC consistently with data during RAM accesses from the main system. This is not related to the problem you had, but should not be anyway:
You can try a few things:
- modify nvidia.settings. Please select:
'usebios true'. This let's the driver run the card as it was inited by it's BIOS at POST time. It might be there's slightly more bandwidth available then.
BTW: you should also select: 'dma_acc true'. Though it isn't used atm, it's working much better than PIO mode. Also, on NV40 and later, PIO mode doesn't work at all.
- try 16 bit colordepth. This halves the bandwidth needed. Problem gone?
- try 8 bit colordepth if 16 bit did not help. OK?
If you see that it's OK in the lower colordepth, but you can't solve it in 32bit mode by setting 'usebios true',
There's only one option left atm: you could tweak the RAM clock, on your own risk of course! From the log you uploaded which executed the coldstart scripts, you can gather that your GPU speed is set at 250Mhz, and the RAM clock at 400Mhz.
Try to up your RAM speed by say 5%, so around 420Mhz. Does that influence the static in a positive manner? If so, and your card remains stable, you could try 10%, 440Mhz.
I wouldn't go further than that though..
I expect in Windows you don't have that problem in 1920x1080 @ 60Hz in 32bit depth. Correct? This could mean the clock is higher in windows too, but it could also mean that in windows there's a (better) algorithm in the driver to share the bandwidth between sys access and DAC access (prioritizing). This is something I'd rather not setup since little is known about the inner workings of that mechanism.
What you can also try is lowering the refreshrate below 60Hz: the lower, the less bandwidth is required. If you are on a flatpanel (you are I'd say) then 50Hz still offers a steady picture I guess.
OK, lots of things for you to try ;-)
Keep me posted please!
Rudolf.
comment:9 by , 13 years ago
Adding "usebios true" fixed the static, but the splash screen displays at 75 Hz and I get an out of range message on my monitor. The system is fine after loading.
comment:10 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Hi again,
Since 'usebios true' is the driver's default setting I'm closing this ticket. Thanks for your help solving it!
About the bootscreen: this might be (probably is) related to ticket #3850. It will be good to know if this bootscreen problem of yours is fixed after that bug is fixed.
Bye!
Rudolf.
comment:11 by , 13 years ago
Version: | R1 alpha1 → R1/alpha1 |
---|
The card is capable of the resolution because I tested it in Ubuntu 9.04 and it appears correctly.