added modeline for 1920x1080p, fullHD TV mode, based on GSM W2353 screen's native line (bug #4479).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33131 a95241bf-73f2-0310-859d-f6bbb57e9c96